--- a/src/components/work/WorkCredits.astro
+++ b/src/components/work/WorkCredits.astro
@@ -33,7 +33,7 @@ const { className, credits, link } = Astro.props;
           font-semibold p-3 sm:p-4
           border-gray-200 border
           bg-gray-50 hover:bg-gray-200 rounded-lg
-          transition
+          transition cursor-pointer
         "
       >
         <a
