--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -43,8 +43,11 @@ const works = worksData.data;
 
 <Layout>
   <div class="bg-background text-foreground text-body-sm sm:text-body-base tracking-wider">
-    <main class="flex flex-col gap-8 items-center sm:items-start px-5 pt-28 pb-4 sm:px-20 sm:pt-40 sm:pb-10 max-w-screen-lg mx-auto">
-      <h1 class="text-4xl text-center sm:text-left">Works</h1>
+    <main class="flex flex-col gap-16 items-center sm:items-start px-5 pt-28 pb-4 sm:px-20 sm:pt-40 sm:pb-10 max-w-screen-xl mx-auto">
+      <div class="flex flex-col gap-2 w-full">
+        <h1 class="text-4xl text-center sm:text-left">Works</h1>
+        <p class="text-xs text-center sm:text-left">作品一覧</p>
+      </div>
       <WorkList client:visible initialCategories={categories} initialWorks={works} />
     </main>
   </div>
