--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,20 +34,22 @@ h1, h2, h3, h4, h5, h6 {
 /* swup */
 .transition-main {
   transition-property: opacity, transform, filter;
-  transition-duration: 1.2s;
-  transition-timing-function: cubic-bezier(.1,1,.3,1);
+  /* transition-duration: 1.2s; */
+  /* transition-timing-function: cubic-bezier(.1,1,.3,1); */
+  transition-duration: 0.4s;
+  transition-timing-function: ease;
 }
 
 html.is-leaving .transition-main {
   opacity: 0;
-  filter: blur(1px);
+  filter: blur(2px);
   transition-duration: 0.4s;
   transition-timing-function: ease;
 }
 
 html.is-rendering .transition-main {
   opacity: 0;
-  transform: translateY(30px);
-  filter: blur(4px);
+  /* transform: translateY(30px); */
+  filter: blur(2px);
 }
 
