--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import "../styles/global.css";
@@ -18,6 +19,7 @@ const { title, description } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<meta name="description" content={description} />
+    <ViewTransitions />
     <script is:inline id="adobe-fonts">
       (function(d) {
         var config = {
@@ -31,7 +33,7 @@ const { title, description } = Astro.props;
 	</head>
 	<body>
 		<Header />
-    <main id="swup" class="transition-main">
+    <main>
       <slot />
     </main>
 		<Footer />
