--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="text-body-sm sm:text-body-base py-10 fixed top-0 left-0 w-full z-50">
+<header transition:name="main-header" class="text-body-sm sm:text-body-base py-10 fixed top-0 left-0 w-full z-50">
   <div class="flex justify-between items-center z-10 px-5 sm:px-20 max-w-screen-xl mx-auto">
     <a href="/" class="hover:underline">
       Chiba Yuto
