--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
+import { ClientRouter } from 'astro:transitions';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import "../styles/global.css";
@@ -8,6 +8,28 @@ import "@fontsource/manrope/500.css";
 import "@fontsource/manrope/600.css";
 
 const { title, description } = Astro.props;
+
+const anim = {
+  old: {
+    name: "fadeOut",
+    duration: "0.4s",
+    easing: "ease",
+    fillMode: "forwards",
+  },
+  new: {
+    name: "fadeIn",
+    duration: "1.5s",
+    easing: "cubic-bezier(.1,1,.3,1)",
+    delay: "0.4s",
+    fillMode: "backwards",
+  },
+};
+
+const fadeTransition = {
+  forwards: anim,
+  backwards: anim,
+};
+
 ---
 
 <!doctype html>
@@ -18,8 +40,8 @@ const { title, description } = Astro.props;
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+    <ClientRouter />
 		<meta name="description" content={description} />
-    <ViewTransitions />
     <script is:inline id="adobe-fonts">
       (function(d) {
         var config = {
@@ -32,10 +54,22 @@ const { title, description } = Astro.props;
     </script>
 	</head>
 	<body>
-		<Header />
-    <main>
+		<Header transition:animate="none" />
+    <main transition:animate={fadeTransition}>
       <slot />
     </main>
-		<Footer />
+		<Footer transition:animate={fadeTransition}/>
 	</body>
 </html>
+
+<style is:global>
+  @keyframes fadeOut {
+    from { opacity: 1; filter: blur(0); }
+    to   { opacity: 0; filter: blur(2px); }
+  }
+
+  @keyframes fadeIn {
+    from { opacity: 0; filter: blur(3px); transform: translateY(30px); }
+    to   { opacity: 1; filter: blur(0); transform: translateY(0); }
+  }
+</style>
