Footerコンポーネントのスタイルを修正し、最大幅を設定しました。

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const year = new Date().getFullYear();
 ---
 
 <footer class="text-body-sm sm:text-body-base py-8">
-  <div class="flex justify-between items-center px-5 sm:px-20 mx-auto">
+  <div class="flex justify-between items-center px-5 sm:px-20 max-w-screen-xl mx-auto">
     <p>Yuto CHIBA</p>
     <p class="flex gap-6">
       &copy; {year} Yuto CHIBA.
