--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -39,9 +39,15 @@ const [categoriesData, worksData] = await Promise.all([
 
 const categories = categoriesData.data;
 const works = worksData.data;
+
+const meta = {
+  title: "Works | Chiba Yuto",
+};
 ---
 
-<Layout>
+<Layout
+  title={meta.title}
+>
   <div class="bg-background text-foreground text-body-sm sm:text-body-base tracking-wider">
     <main class="flex flex-col gap-16 items-center sm:items-start px-5 pt-28 pb-4 sm:px-20 sm:pt-40 sm:pb-10 max-w-screen-xl mx-auto">
       <div class="flex flex-col gap-2 w-full">
