--- a/src/pages/works/[work].astro
+++ b/src/pages/works/[work].astro
@@ -85,7 +85,7 @@ if (!work) {
     <main
       class="
         flex flex-col row-start-2 items-center sm:items-start
-        px-5 pt-28 pb-4 sm:px-20 sm:pt-40 sm:pb-10 max-w-screen-xl mx-auto
+        px-5 pt-28 pb-4 sm:px-20 sm:pt-40 sm:pb-10 max-w-dp mx-auto
       "
     >
       <WorkHeader name={work.name} startDate={work.startDate} endDate={work.endDate}/>
