--- a/src/components/index/ProfileSection.astro
+++ b/src/components/index/ProfileSection.astro
@@ -1,24 +1,28 @@
 ---
 import { Image } from 'astro:assets';
-import profileImage from "../../assets/images/logo.jpeg";
+import profileImage from "../../assets/images/profile_compressed.jpg";
 ---
 
-<div class="flex items-center flex-col sm:flex-row gap-16">
+<div class="flex items-center flex-col md:flex-row gap-16 md:gap-24">
   <Image
-    class="rounded-lg border-gray-200 border w-72 h-72"
+    class="border-gray-200 border w-[350px] h-[500px] object-cover"
     src={profileImage}
     alt="Yuto CHIBA"
-    width="288"
-    height="288"
+    width="1752"
+    height="1168"
     decoding="async"
     loading="lazy"
   />
   <div>
     <h2 class="text-xl sm:text-2xl py-4">千葉 裕斗 / Yuto CHIBA</h2>
     <div class="flex flex-col gap-2">
-      <p>明治大学総合数理学部先端メディアサイエンス学科所属</p>
-      <p>2003年生まれ、埼玉県出身。3DCGとMotionGraphicsを組み合わせた映像作品の制作を得意としている。</p>
-      <p>また最近は、XRを用いたインタラクションやシステムの設計に興味がある。</p>
+      <p>明治大学総合数理学部先端メディアサイエンス学科3年 渡邊恵太研究室所属</p>
+      <p>2003年生まれ。埼玉県出身。XR空間でのインタラクションやシステムの設計について研究しています。</p>
+      <p>
+        また、フリーランスの映像作家
+        <a class="underline hover:text-cyan-600" href="https://pmgwork.com" target="_blank">(pmgwork.com)</a>
+        としても活動しており、フォトリアルCGやモーショングラフィックスを用いた映像作品の制作を得意としています。
+      </p>
     </div>
   </div>
 </div>
