--- a/src/components/index/SkillsSection.astro
+++ b/src/components/index/SkillsSection.astro
@@ -11,7 +11,7 @@ const categories = Array.from(new Set(skills.map(skill => skill.category)));
 
 <div class="flex flex-col gap-2">
   <h2 class="text-2xl">使える言語・ツール</h2>
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-12">
     {categories.map((category) => (
       <div>
         <h2 class="text-xl font-bold py-4">{category}</h2>
@@ -19,7 +19,10 @@ const categories = Array.from(new Set(skills.map(skill => skill.category)));
           {skills
             .filter(skill => skill.category === category)
             .map((skill) => (
-              <div class="text-xs sm:text-sm px-2 py-1 rounded-lg bg-gray-50 border-gray-200 border">
+              <div class="
+                text-xs sm:text-sm px-2 py-1
+                rounded-lg bg-gray-50 border-gray-200 border
+              ">
                 {skill.label}
               </div>
             )
