--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -49,7 +49,11 @@ const meta = {
   title={meta.title}
 >
   <div class="bg-background text-foreground text-body-sm sm:text-body-base tracking-wider">
-    <main class="flex flex-col gap-16 items-center sm:items-start px-5 pt-28 pb-4 sm:px-20 sm:pt-40 sm:pb-10 max-w-screen-xl mx-auto">
+    <main class="
+      flex flex-col gap-16 items-center
+      px-5 pt-28 pb-4 max-w-dp mx-auto
+      sm:items-start sm:px-20 sm:pt-40 sm:pb-10
+    ">
       <div class="flex flex-col gap-2 w-full">
         <h1 class="text-4xl text-center sm:text-left">Works</h1>
         <p class="text-xs text-center sm:text-left">作品一覧</p>
