--- a/src/components/work/WorkCredits.astro
+++ b/src/components/work/WorkCredits.astro
@@ -14,7 +14,7 @@ const { className, credits, link } = Astro.props;
 <div class={`${className ?? ''}`}>
   <div
     class="
-      w-full sm:w-auto px-4 py-2
+      w-full px-4 py-2
       flex flex-row justify-between items-end gap-4 sm:gap-10
       bg-gray-50 border-gray-200 border rounded-lg
     "
@@ -33,7 +33,7 @@ const { className, credits, link } = Astro.props;
           font-semibold p-3 sm:p-4
           border-gray-200 border
           bg-gray-50 hover:bg-gray-200 rounded-lg
-          transition cursor-pointer
+          transition-colors cursor-pointer
         "
       >
         <a
