--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const meta = {
   <div class="text-body-sm sm:text-body-base tracking-wider">
     <div
       class="
-        flex flex-col gap-8 items-start
+        flex flex-col gap-8
         px-5 py-28 max-w-pc mx-auto
         sm:px-20 sm:py-40
       "
@@ -30,9 +30,9 @@ const meta = {
 
     <div
       class="
-        flex flex-col gap-8 items-start
-        px-5 pt-28 pb-12 max-w-pc mx-auto
-        sm:px-20 sm:pt-32 sm:pb-24
+        flex flex-col gap-8
+        px-5 pt-24 pb-12 max-w-pc mx-auto
+        sm:px-20 sm:pt-32 sm:pb-20
       "
     >
       <div class="flex flex-col gap-20 sm:gap-28 w-full">
