--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -48,7 +48,7 @@ const meta = {
 <Layout
   title={meta.title}
 >
-  <div class="bg-background text-foreground text-body-sm sm:text-body-base tracking-wider">
+  <div class="text-body-sm sm:text-body-base tracking-wider">
     <main class="
       flex flex-col gap-16 items-center
       px-5 pt-28 pb-4 max-w-dp mx-auto
