--- a/src/components/index/ProfileSection.astro
+++ b/src/components/index/ProfileSection.astro
@@ -3,7 +3,7 @@ import { Image } from 'astro:assets';
 import profileImage from "../../assets/images/profile_compressed.jpg";
 ---
 
-<div class="flex items-center flex-col md:flex-row gap-16 md:gap-24">
+<div class="flex items-center flex-col md:flex-row gap-8 sm:gap-16 md:gap-24">
   <Image
     class="border-gray-200 border w-[350px] h-[500px] object-cover"
     src={profileImage}
