--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,12 +53,20 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* View Transition */
-@keyframes fadeOut {
+@keyframes outAnimation {
   from { opacity: 1; filter: blur(0); }
   to   { opacity: 0; filter: blur(2px); }
 }
 
-@keyframes fadeIn {
+@keyframes inAnimation {
   from { opacity: 0; filter: blur(3px); transform: translateY(30px); }
   to   { opacity: 1; filter: blur(0); transform: translateY(0); }
+}
+
+.page-fade-out {
+  animation: outAnimation 0.4s ease forwards;
+}
+
+.page-fade-in {
+  animation: inAnimation 1.5s cubic-bezier(.1,1,.3,1) forwards;
 }
