--- a/src/components/work/WorkCredits.astro
+++ b/src/components/work/WorkCredits.astro
@@ -11,15 +11,15 @@ interface Props {
 const { className, credits, link } = Astro.props;
 ---
 
-<div class={`${className ?? ''}`}>
+<div class={`${className ?? ''} w-full md:w-auto`}>
   <div
     class="
       w-full px-4 py-2
-      flex flex-row justify-between items-end gap-4 sm:gap-10
+      flex flex-row justify-between items-end md:items-center gap-4 md:gap-10
       bg-gray-50 border-gray-200 border rounded-lg
     "
   >
-    <div class="flex flex-col sm:flex-row gap-4 sm:gap-10">
+    <div class="flex flex-col md:flex-row gap-4 md:gap-10">
       {credits?.map((credit) => (
         <div class="flex flex-col">
           <p class="font-semibold">{credit.title}</p>
@@ -28,22 +28,24 @@ const { className, credits, link } = Astro.props;
       ))}
     </div>
     {link && (
-      <div
+      <a
+        href={link}
+        target="_blank"
+        rel="noopener noreferrer"
         class="
-          font-semibold p-3 sm:p-4
-          border-gray-200 border
-          bg-gray-50 hover:bg-gray-200 rounded-lg
-          transition-colors cursor-pointer
+          flex items-center gap-2 px-5 py-3 md:m-1
+          bg-gray-50 border-gray-200 border rounded-full
+          hover:border-cyan-600 transition-all duration-300
+          cursor-pointer
         "
       >
-        <a
-          href={link}
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          リンク
-        </a>
-      </div>
+        <div class="flex-shrink-0">
+          <svg class="w-5 h-5 text-foreground" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+          </svg>
+        </div>
+        <span class="text-foreground font-semibold">リンク</span>
+      </a>
     )}
   </div>
 </div>
