ContactSectionコンポーネントのGitHubリンクを更新し、WorksHighlightおよびWorkImageコンポーネントで画像の読み込み方法を改善しました。特に、画像コンポーネントにloading="eager"属性を追加しました。

--- a/src/components/index/ContactSection.astro
+++ b/src/components/index/ContactSection.astro
@@ -17,7 +17,7 @@ const contacts = [
     ariaLabel: 'Twitter',
   },
   {
-    name: 'chiba-yuto',
+    name: 'PMGWork',
     href: 'https://github.com/chiba-yuto',
     icon: 'github',
     ariaLabel: 'GitHub',
