ContactSectionコンポーネントのGitHubリンクをPMGWorkに更新しました。

--- a/src/components/index/ContactSection.astro
+++ b/src/components/index/ContactSection.astro
@@ -18,7 +18,7 @@ const contacts = [
   },
   {
     name: 'PMGWork',
-    href: 'https://github.com/chiba-yuto',
+    href: 'https://github.com/pmgwork',
     icon: 'github',
     ariaLabel: 'GitHub',
   }
