--- a/src/components/index/ProfileSection.astro
+++ b/src/components/index/ProfileSection.astro
@@ -21,7 +21,7 @@ import profileImage from "../../assets/images/profile_compressed.jpg";
       <p>2003年生まれ。埼玉県出身。XR空間でのインタラクションやシステムの設計について研究しています。</p>
       <p>
         また、フリーランスの映像作家
-        <a class="underline hover:text-cyan-600" href="https://pmgwork.com" target="_blank">(pmgwork.com)</a>
+        <a class="underline hover:text-primary" href="https://pmgwork.com" target="_blank">(pmgwork.com)</a>
         としても活動しており、フォトリアルCGやモーショングラフィックスを用いた映像作品の制作を得意としています。
       </p>
     </div>
