--- a/src/components/work/WorkCredits.astro
+++ b/src/components/work/WorkCredits.astro
@@ -35,7 +35,7 @@ const { className, credits, link } = Astro.props;
         class="
           flex items-center gap-2 px-5 py-3 md:m-1
           bg-gray-50 border-gray-200 border rounded-full
-          hover:border-cyan-600 transition-all duration-300
+          hover:border-primary transition-all duration-300
           cursor-pointer
         "
       >
